# pg_play

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: agent-client-setup.md
src/pg_play/: __init__.py  __main__.py  cli.py  configuration_review.py  contract.py  live_diagnostics.py  live_diagnostics_worker.py  manifest.py  mcp_server.py  report.py  runner.py  service.py  state.py  worker.py
src/pg_play/schema/: pg_play-v1.schema.json  run-event-v1.schema.json  run-state-v2.schema.json
src/pg_play/skills/analyze-postgres-experiment/: SKILL.md
src/pg_play/skills/analyze-postgres-experiment/agents/: openai.yaml
src/pg_play/skills/analyze-postgres-experiment/references/: benchmark-joins.md  interpretation.md
src/pg_play/skills/diagnose-live-postgres/: SKILL.md
src/pg_play/skills/diagnose-live-postgres/agents/: openai.yaml
src/pg_play/skills/recover-postgres-experiment/: SKILL.md
src/pg_play/skills/recover-postgres-experiment/agents/: openai.yaml
src/pg_play/skills/review-postgres-configuration/: SKILL.md
src/pg_play/skills/review-postgres-configuration/agents/: openai.yaml
src/pg_play/skills/run-postgres-experiment/: SKILL.md
src/pg_play/skills/run-postgres-experiment/agents/: openai.yaml
src/pg_play/skills/run-postgres-experiment/references/: manifest.md
tests/: test_cli.py  test_component_interfaces.py  test_configuration_review.py  test_contract.py  test_live_diagnostics.py  test_manifest.py  test_mcp_server.py  test_package_assets.py  test_report.py  test_runner.py  test_service.py  test_state.py
tools/: run_pg10_18_mcp_matrix.py
